--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python = "^3.12"
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
 pyright = "^1.1.335"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
