--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ isort = "^5.12.0"
 [tool.isort]
 profile = "black"
 from_first = "true"
+lines_after_imports = 2
 
 [build-system]
 requires = ["poetry-core"]
