--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,6 +23,8 @@ jobs:
       uses: abatilo/actions-poetry@v2
     - name: Install poetry project
       run: poetry install
+    - name: Format
+      run: poetry run ruff format --check
     - name: Lint
       run: poetry run ruff check --extend-select I
     - name: Run pyright
