--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ pyright = "^1.1.335"
 pytest = "^7.4.3"
 ruff = "^0.3.7"
 
+[tool.ruff]
+line-length = 120
+
 [tool.ruff.lint.isort]
 from-first = true
 lines-after-imports = 2
